the flatJar is now the reference